# greentimeschedule

./: .env.example  .gitignore  README.md  architecture.md  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/models/: carbon.py  scheduling.py
app/routes/: carbon.py  health.py  schedule.py
app/services/: cache_service.py  carbon_service.py  schedule_service.py
app/utils/: exceptions.py  load_env.py  time_utils.py
examples/: client_example.py
tests/: conftest.py  test_carbon_service.py  test_schedule_service.py
